Fixed vh related positioning issue on iOS Safari by using additional dvh heigh rule.

--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -750,6 +750,7 @@ a.sui-text-secondary:hover {
   display: flex;
   width: 100vw;
   height: 100vh;
+  height: 100dvh;
   overflow: hidden;
   flex-direction: column;
   flex-wrap: nowrap;
@@ -914,6 +915,7 @@ common-group - no padding
   z-index: var(--hud-z-index);
   width: 100vw;
   height: 100vh;
+  height: 100dvh;
   pointer-events: none;
 }
 
@@ -2152,6 +2154,7 @@ only screen and (min-height: 1024px) {
   #loading-screen {
     width: 50vw;
     height: 50vh;
+    height: 50dvh;
   }
 
   #notification-dialogue {
@@ -2160,6 +2163,7 @@ only screen and (min-height: 1024px) {
 
   #sui-offcanvas {
     height: 50vh;
+    height: 50dvh;
   }
 }
 @media only screen and (min-width: 2304px),
@@ -2190,6 +2194,7 @@ only screen and (min-height: 2048px) {
   #loading-screen {
     width: 25vw;
     height: 25vh;
+    height: 25dvh;
   }
 
   #notification-dialogue {
@@ -2198,6 +2203,7 @@ only screen and (min-height: 2048px) {
 
   #sui-offcanvas {
     height: 25vh;
+    height: 25dvh;
   }
 }
 
