--- a/src/public/css/sui/sui.css
+++ b/src/public/css/sui/sui.css
@@ -2660,6 +2660,7 @@ label.sui-form-element-group-label {
   max-width: 100%;
   width: 332px;
   height: 100vh;
+  height: 100dvh;
 }
 
 #sui-offcanvas.sui-mod-right {
@@ -2668,6 +2669,7 @@ label.sui-form-element-group-label {
   max-width: 100%;
   width: 332px;
   height: 100vh;
+  height: 100dvh;
 }
 
 .sui-offcanvas-body {
